# siscom-consumer

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.kafka.yml  docker-compose.yml  rustfmt.toml
.devcontainer/: Cargo.toml
.github/workflows/: deploy.yml
.semgrep/: config.yaml
.semgrep/rules/: rust-strict.yaml
config/: app.toml
docker/: mosquitto.conf
docs/: serialization-guide.md
migrations/: 001_create_communications_suntech.sql  002_create_communications_queclink.sql  003_alter_client_ip_to_varchar.sql  004_add_alert_type.sql  005_add_backup_battery_percent.sql
scripts/: watch.sh
src/: boot.rs  config.rs  errors.rs  main.rs  siscom.v1.rs
src/models/: communication_record.rs  device_message.rs  mod.rs  suntech_message.rs
src/processors/: mod.rs
src/services/: database.rs  kafka_consumer.rs  kafka_producer.rs  message_consumer.rs  mod.rs  mqtt_consumer.rs  processor.rs
src/utils/: mod.rs
