[package]
name = "tracking-consumer-rust"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre <tu@email.com>"]
description = "High-performance tracking consumer for Kafka pipeline"
license = "MIT"

[[bin]]
name = "test_publish"
path = "src/bin/test_publish.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
figlet-rs = "0.1"

# MQTT removed - using only Kafka

# Kafka
rdkafka = { version = "0.37.0", features = ["tokio", "ssl-vendored"] }

# Database
tokio-postgres = "0.7"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf
prost = "0.12"
prost-types = "0.12"

# Geolocalización
geoutils = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Config
config = "0.14"
toml = "0.8"

# Utilidades
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = ">=1.11.1, <2.0"
async-trait = "0.1"

# CLI (opcional)
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"

[[bin]]
name = "siscom-consumer"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# Suprimir warnings específicos de dependencias (opcional)
# Si quieres builds más limpios, puedes descomentar:
# [workspace.metadata.cargo]
# resolver = "2"
